# OrcaDesktop

./: .gitignore  Makefile  README.md  install.sh  test.py
colcon_ws/src/rmf_manager/: README.md
colcon_ws/src/rmf_manager/rmf_manager_cloud/: CMakeLists.txt  README.md  TODO.md  package.xml
colcon_ws/src/rmf_manager/rmf_manager_cloud/launch/: go2rtc.yaml  server.launch.py
colcon_ws/src/rmf_manager/rmf_manager_cloud/scripts/: cam_noise_node.py  cloud_server_node.py  rmf_influx_exporter.py
colcon_ws/src/rmf_manager/rmf_manager_cloud/test/: test_gortc.py
colcon_ws/src/rmf_manager/rmf_manager_cloud/web/static/: styles.css
colcon_ws/src/rmf_manager/rmf_manager_cloud/web/templates/: index.html  robots.html  viz.html
colcon_ws/src/rmf_manager/rmf_manager_msgs/: CMakeLists.txt  package.xml
colcon_ws/src/rmf_manager/rmf_manager_msgs/msg/: Edge2D.msg  MapMetadata.msg  MultiCamSnapshot.msg  RobotCommand.msg  RobotEvent.msg  RobotState.msg  Vertex2D.msg
colcon_ws/src/rmf_manager/rmf_manager_msgs/srv/: ListTasks.srv  LoadMap.srv  MoveTask.srv  ScheduleDelivery.srv  ScheduleGoTo.srv  SchedulePatrol.srv  SetResumeAfterCharge.srv  TriggerDelivery.srv
dev/: README.md  orca_docker_ui.py
docker/: .env  GPU.md  Makefile  README.md  docker-compose.yml  go2rtc.yaml  ros2_cli.Dockerfile
docker/frigate/: config.yml
docker/go2rtc/: go2rtc.yaml
docker/zenoh/: bridge-dds.json5  router.json5
docker/zoneminder/: Dockerfile  README.md  entrypoint.sh
docs/: graphana.json  run_gundb_demo.sh
