<?xml version="1.0"?>
<package format="3">
  <name>rmf_manager_msgs</name>
  <version>0.1.2</version>
  <description>Unified task manager with threaded Flask UI.</description>

  <maintainer email="you@example.com">Alyona</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <exec_depend>opennav_docking_msgs</exec_depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>flask</exec_depend>
  <exec_depend>waitress</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>std_srvs</exec_depend>
	<member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
